@startuml 

entity brand {
  *brand_id <<PK>>
  name
  slug
  status
}

entity category {
  *category_id : <<PK>>
  parent_id : <<FK>>
  name : VARCHAR(200)
  slug : Slug(200)
}

entity product {
  *product_id <<PK>>
  brand_id <<FK>>
  name
  slug
  status
}

entity product_category {
  *product_id <<FK>>
  *category_id <<FK>>
  is_primary
}

entity product_image {
  *image_id <<PK>>
  product_id <<FK>>
  url
  sort_order
}

entity product_variant {
  *variant_id <<PK>>
  product_id <<FK>>
  sku
  price
  status
}

entity inventory {
  *variant_id <<PK>><<FK>>
  qty_on_hand
  qty_reserved
}

brand            ||--o{ product
category         ||--o{ category : parent
product          ||--o{ product_category
category         ||--o{ product_category
product          ||--o{ product_image
product          ||--o{ product_variant
product_variant  ||--|| inventory
@enduml